# msg_channel

./: Cargo.toml  README.md
crates/msg_channel_core/: Cargo.toml
crates/msg_channel_core/src/: handle.rs  lib.rs  macros.rs  message_set.rs
crates/msg_channel_macro/: Cargo.toml
crates/msg_channel_macro/src/: lib.rs  msg_set.rs
examples/: playground.rs  readme.rs
src/: lib.rs
