[package]
name = "msg_channel"
version = "0.1.0-beat.2"
edition = "2021"
license = "MIT"
authors = ["ycysdf"]
repository = "https://github.com/ycysdf/msg_channel"
description = "message channel"
keywords = ["message", "channel", "bus"]

[dependencies]
msg_channel_core = { path = "crates/msg_channel_core", version = "0.1.0-beat.2" }
msg_channel_macro = { path = "crates/msg_channel_macro", version = "0.1.0-beat.2" }
paste = "1"

[dev-dependencies]
tokio = { version = "1.0.0", features = ["full"] }
color-eyre = "0.6"

[workspace]
members = ["crates/*"]