[package]
name = "msg_channel_macro"
version = "0.1.0-beat.1"
edition = "2021"
license = "MIT"
authors = ["ycysdf"]
description = "message channel"
keywords = ["message", "channel", "bus"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
quote = "1"